# ship-tracking-drone

./: README.md
boatController/: CMakeLists.txt  package.xml
boatController/src/: boatController.cpp  boatController.hpp  main.cpp
globalPathPlanner/: CMakeLists.txt  package.xml
globalPathPlanner/src/: globalPathPlanner.cpp  globalPathPlanner.hpp  main.cpp
lowLevelDector/: CMakeLists.txt  cvFunctions.h  my_subscriber.cpp  package.xml
lowLevelDector/src/: cvFunctions.cpp  cvFunctions.h  main.cpp
stateMachine/: CMakeLists.txt  drone.launch  package.xml
stateMachine/src/: main.cpp  stateMachine.cpp  stateMachine.hpp
tracker/: CMakeLists.txt  package.xml
tracker/src/: main.cpp  tracker.cpp  tracker.hpp
